--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,37 @@
 img {
 	width: 100%;
 }
+body {
+  background-color: #000007;
+  background-image: url("../images/back4.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+#button {
+  background-color: #f2eded;
+  position: absolute;
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  white-space: nowrap;
+  display: none;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0
+    rgba(0, 0, 0, 0.19);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  white-space: nowrap;
+}
 .video-container {
-	background-image: url(../css/back2.jpg);
+	background-image: url(../images/back2.jpg);
 	background-repeat: no-repeat;
 	background-position: center top;
 	background-size: cover;
@@ -17,7 +46,6 @@ img {
 	height: 100%;
 	overflow: hidden;
 }
-
 .video-container video {
 	/* Make video to at least 100% wide and tall */
 	min-width: 100%;
@@ -46,11 +74,6 @@ img {
 	line-height: 1.5;
 	text-align: center;
 }
-
-body {
-	background-color: #3e2413;
-}
-
 .fon_logo
 {
 	background: -moz-radial-gradient(center, ellipse cover, rgba(34,0,0,0.7) 0%, rgba(229,229,229,0) 60%); /* FF3.6-15 */
@@ -66,23 +89,22 @@ body {
     width: 300px
   }
   .one {
-  background: url('../css/back1.jpg') top center no-repeat;
+  background: url('../images/back1.jpg') top center no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
   }
   .two {
-  background: url('../css/back2.jpg') top center no-repeat;
+  background: url('../images/back2.jpg') top center no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
   }
   .three {
-  background: url('../css/back3.jpg') top center no-repeat;
+  background: url('../images/back3.jpg') top center no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
   }
 
 }
-
 @media only screen and (min-width: 767px) and (max-width: 1024px) {
 
 	.overlay{
